--- a/proofs.tex
+++ b/proofs.tex
@@ -57,7 +57,7 @@ If we have $k \cdot n+1$ items in $n$ containers so there must be at least one c
 
 \subsection{Extremal principle} 
 
-Take a look at the smallest and the largest possible value, and then show that there is an other value even more extreme.
+Take a look at the smallest (the largest) possible value. Usually it helps to build a contradiction (see section 2.2) by showing that there is an other value even smaller (larger).
 
 \begin{theorem}
   $n$ students are standing in a field such that the distance between each pair is distinct. Each student is holding a ball, and when the teacher blows a whistle, each student throws their ball to the nearest student. Prove that there is a pair of students that throw their balls to each other.
